2005-01-04  Nathaniel Smith  <njs@codesourcery.com>

	* database.cc (get_revision_parents): Add invariant.
	(get_revision_children): Likewise.
	(get_revision): Likewise.
	(put_revision): Likewise.

	* tests/t_merge_ancestor.at: New test.
	* tests/t_propagate_desc.at: Likewise.
	* tests/t_propagate_anc.at: Likewise.
	* testsuite.at: Call them.

2005-01-04  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_netsync_diffbranch.at: Add priority, add description of
	problem and solution.
	Also, XFAIL it.
	* tests/t_netsync_unrelated.at: Add reference to discussion.
	* tests/t_cmdline_options.at: Remove priority marking from
	non-bug.
	* tests/t_checkout_dir.at: XFAIL when run as root.

	* tests/t_netsync_nocerts.at: New test.
	* testsuite.at: Call it.
	
2005-1-3  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_netsync_diffbranch.at: add a new test for pulling a branch
	with a parent from a different branch.
	* testsuite.at: add it

2004-12-30  graydon hoare  <graydon@pobox.com>

	* constants.cc (netcmd_current_protocol_version): Set to 3.
	* tests/t_crlf.at: New test of crlf line encodings.
	* testsuite.at: Call it.
	* monotone.spec: Note 0.16 release.

2004-12-30  graydon hoare  <graydon@pobox.com>

	* win32/get_system_flavour.cc: Fix little compile bugs.

2004-12-30  Julio M. Merino Vidal  <jmmv@menta.net>

	* change_set.{cc,hh}: Add the has_renamed_file_src function in
	change_set::path_rearrangement.
	* commands.cc: Make the 'log' command show nothing for renamed or
	deleted files (when asked to do so) and stop going backwards in
	history when such condition is detected; they don't exist any more,
	so there is no point in showing history (and could drive to incorrect
	logs anyway).
	* tests/t_log_nonexistent.at: New check to verify previous.
	* testsuite.at: Add it.

2004-12-30  graydon hoare  <graydon@pobox.com>

	* Makefile.am: Clean full testsuite directory and full-version.
	* configure.ac: Bump version number.
	* po/monotone.pot: Regenerate.